--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,125 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand');
-.font4thin {
-    font-family: 'Quicksand',sans-serif;
-}
-
-.menu-panel {
-    width: 100% !important;
-}
-
-.menu-custom .details {
-    padding: 170px 0 0 0;
-    height: 100%;
-    overflow-y: auto;
-}
-
-.menu-custom .details h1 {
-    font-family: 'Montserrat';
-    font-size: 28px;
-    font-weight: 400;
-    color: #111111;
-    line-height: 1.2;
-    margin: 0 0 50px 0;
-}
-
-.menu-custom .details h4 {
-    font-family: 'Open Sans';
-    font-size: 16px;
-    font-weight: 600;
-    color: #222222;
-    letter-spacing: 0;
-    line-height: 1.4;
-    margin: 0 0 20px 0;
-}
-
-
-.menu-custom.details ul {
-    list-style-type: none;
-}
-.menu-custom .details ul li {
-    font-family: 'Montserrat';
-    font-size: 12px;
-    font-weight: 400;
-    color: #111111;
-    letter-spacing: 1px;
-    text-decoration: none;
-    line-height: 1.5;
-    margin-right: 10px;
-    display: inline;
-}
-
-.menu-custom .awards {
-    padding: 50px 0 0 0;
-}
-
-.menu-custom .awards h4 {
-    font-family: 'Open Sans';
-    font-size: 16px;
-    font-weight: 600;
-    color: #222222;
-    letter-spacing: 0;
-    line-height: 1.4;
-    margin: 0 0 20px 0;
-}
-
-.menu-custom .awards ul {
-    list-style-type: none;
-}
-
-.menu-custom.awards ul li {
-    padding-bottom: 10px;
-}
-
-.menu-custom .awards ul li a {
-    font-family: 'Poppins';
-    font-size: 12px;
-    font-weight: 400;
-    color: #343434;
-    line-height: 1.2;
-    letter-spacing: 1px;
-    text-decoration: none;
-}
-
-
-.menu-custom .about {
-    padding: 100px 0 0 0;
-    height: 100%;
-    overflow-y: auto;
-}
-
-.menu-custom .about h1 {
-        font-size: 42px;
-    font-family: 'Open Sans';
-    font-weight: 700;
-    letter-spacing: -1px;
-}
-
-.menu-custom .about h6 {
-    font-family: 'Montserrat';
-    font-size: 12px;
-    font-weight: 400;
-    color: #A1A1A1;
-    letter-spacing: 1px;
-    line-height: 1.4;
-    margin: 0 0 30px 0;
-}
-
-.menu-custom .about p {
-    font-size: 13px;
-    color: #888888;
-    line-height: 1.5;
-    font-family: 'Open Sans';
-    font-weight: 400;
-    font-style: normal;
-    letter-spacing: 0;
-    margin: 0 0 20px 0;
-}
-.menu-custom .about h4 {
-    font-family: 'Montserrat';
-    font-size: 16px;
-    font-weight: 400;
-    color: #111111;
-    letter-spacing: 1px;
-    line-height: 1.4;
-    margin: 0 0 40px 0;
+.dark {
+    font-family: 'Major Mono Display', monospace !important;
 }
